Corrección de sincronismos
Se corrige la sincronización en móviles del audio y la imagen.
Se corrige el color de fondo del último elemento seleccionado que se quedaba en marcado al iniciar el siguiente nivel.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,9 @@ a:hover{
 
 #resultado img{
     width: 70%;
+    max-width: 300px;
 }
+
 /** Botones de redes */
 .btn-social{
     color: white;
